--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </header>
   <div class="window">
    <div class="zag" align="center">
-     <h1>ROFLAN CLOCK</h1>
+     <h1>ROFLAN CLOCK!</h1>
    </div>
 
    <div id="clock"></div>
