--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="window">
    <div class="zag" align="center">
      <h1>ROFLAN CLOCK!</h1>
+     <h2>It's time </h2>
    </div>
 
    <div id="clock"></div>
